--- a/build.gradle
+++ b/build.gradle
@@ -1,2 +1,10 @@
 apply plugin: 'idea'
 apply plugin: 'java'
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    compile 'io.dropwizard:dropwizard-core:0.7.0'
+}
